objects/Marketo_Lead_Merge__c.object
<CustomObject>
    <description>List of Marketo leads that needs to be merged</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketo Lead Merge List</relationshipLabel>
        <relationshipName>Marketo_Lead_Merge_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Losing_Marketo_ID__c</fullName>
        <label>Losing Marketo ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Marketo_ID__c</fullName>
        <label>Winning Marketo ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketo Lead Merge</label>
    <nameField>
        <displayFormat>MLMN-{0000000}</displayFormat>
        <label>Marketo Lead Merge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketo Lead Merge List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>